rework wip jwt
