# server/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   routes.User:
     properties:
@@ -11,7 +10,7 @@ definitions:
       password:
         type: string
     type: object
-host: localhost:8080
+host: fuzzy-space-guacamole-4vgqq7x6qw9fqjx6-3000.app.github.dev
 info:
   contact:
     email: fiber@swagger.io
@@ -21,7 +20,7 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
-  title: Fiber Example API
+  title: Fiber API - Ivoire Job
   version: "1.0"
 paths:
   /api/users:
@@ -122,6 +121,8 @@ paths:
           description: User not found
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get user
       tags:
       - users
@@ -163,4 +164,35 @@ paths:
       summary: Update user
       tags:
       - users
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: Login
+      parameters:
+      - description: User
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/routes.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/routes.User'
+        "400":
+          description: Invalid credentials
+          schema:
+            type: string
+      summary: Login
+      tags:
+      - auth
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
